14/12/2023, login_page modified

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -125,6 +125,73 @@ flutter:
     - assets/ver02/images/image-103.png
     - assets/ver02/images/password-not-visible-9-64.png
     - assets/default-book.png
+    - assets/page-1/images/alpha-bookstorelogodark-ver.png
+    - assets/page-1/images/image-100.png
+    - assets/page-1/images/image-100-f9f.png
+    - assets/page-1/images/image-102.png
+    - assets/page-1/images/image-100-MX3.png
+    - assets/page-1/images/vector.png
+    - assets/page-1/images/alpha-bookstorelogodark-ver-W9s.png
+    - assets/page-1/images/auto-group-gulh.png
+    - assets/page-1/images/sf-symbol-xmarkcirclefill.png
+    - assets/page-1/images/auto-group-mgud.png
+    - assets/page-1/images/pencil.png
+    - assets/page-1/images/akar-icons-home.png
+    - assets/page-1/images/image-103.png
+    - assets/page-1/images/setting-4-2.png
+    - assets/page-1/images/user.png
+    - assets/page-1/images/auto-group-fwam.png
+    - assets/page-1/images/sf-symbol-xmarkcirclefill-qPb.png
+    - assets/page-1/images/unlock.png
+    - assets/page-1/images/auto-group-weko.png
+    - assets/page-1/images/auto-group-6ngm.png
+    - assets/page-1/images/.png
+    - assets/page-1/images/switch-human-interface-guidelines.png
+    - assets/page-1/images/reply.png
+    - assets/page-1/images/auto-group-rjzv.png
+    - assets/page-1/images/image-98.png
+    - assets/page-1/images/pencil-fUR.png
+    - assets/page-1/images/auto-group-iwut.png
+    - assets/page-1/images/alpha-bookstorelogodark-ver-uUy.png
+    - assets/page-1/images/frame-17.png
+    - assets/page-1/images/setting-4-2-NNZ.png
+    - assets/page-1/images/homenow.png
+    - assets/page-1/images/auto-group-1c2h.png
+    - assets/page-1/images/bi-eye-fill.png
+    - assets/page-1/images/search-normal-1-3.png
+    - assets/page-1/images/user-contact.png
+    - assets/page-1/images/logout.png
+    - assets/page-1/images/upload.png
+    - assets/page-1/images/pencil-U4D.png
+    - assets/page-1/images/bi-eye-fill-2Ld.png
+    - assets/page-1/images/notification.png
+    - assets/page-1/images/vector-yh7.png
+    - assets/page-1/images/image-103-bg.png
+    - assets/page-1/images/auto-group-dr7x.png
+    - assets/page-1/images/switch-human-interface-guidelines-9Vw.png
+    - assets/page-1/images/sf-symbol-xmarkcirclefill-mK3.png
+    - assets/page-1/images/group-1411.png
+    - assets/page-1/images/double-arrow-down-circle.png
+    - assets/page-1/images/auto-group-tcku.png
+    - assets/page-1/images/vector-Mfs.png
+    - assets/page-1/images/circle-plus.png
+    - assets/page-1/images/auto-group-h6cm.png
+    - assets/page-1/images/info.png
+    - assets/page-1/images/trash.png
+    - assets/page-1/images/textalign-justifycenter-2.png
+    - assets/page-1/images/image-103-Rp9.png
+    - assets/page-1/images/auto-group-e3pb.png
+    - assets/page-1/images/camera.png
+    - assets/page-1/images/switch-human-interface-guidelines-FYH.png
+    - assets/page-1/images/ellipse-36-bg.png
+    - assets/page-1/images/frame-17-ZuX.png
+    - assets/page-1/images/image-98-mnV.png
+    - assets/page-1/images/image-103-5a5.png
+    - assets/page-1/images/ellipse-36-bg-QwX.png
+    - assets/page-1/images/bi-eye-fill-BKK.png
+    - assets/page-1/images/auto-group-hmkh.png
+    - assets/page-1/images/search-normal-1-3-q2V.png
+    - assets/page-1/images/image-106.png
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
