--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   image_picker: ^1.0.4
   intl: ^0.18.1
   flutter_dotenv: ^5.1.0
+  timeago: ^3.6.0
 
 
   # The following adds the Cupertino Icons font to your application.
