--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   intl: ^0.18.1
   flutter_dotenv: ^5.1.0
   timeago: ^3.6.0
+  material_design_icons_flutter: 7.0.7296
 
 
   # The following adds the Cupertino Icons font to your application.
