--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   timeago: ^3.6.0
   material_design_icons_flutter: ^7.0.7296
   dropdown_search: ^5.0.6
+  scrollable_positioned_list: ^0.3.8
 
 
   # The following adds the Cupertino Icons font to your application.
