--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   material_design_icons_flutter: ^7.0.7296
   dropdown_search: ^5.0.6
   scrollable_positioned_list: ^0.3.8
+  qr_flutter: ^4.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
