--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   firebase_core: ^2.24.0
   firebase_auth: ^4.15.0
   firebase_app_check: ^0.2.1+8
+  firebase_messaging: ^14.7.10
   image_picker: ^1.0.4
   intl: ^0.18.1
   flutter_dotenv: ^5.1.0
@@ -56,6 +57,8 @@ dependencies:
   scrollable_positioned_list: ^0.3.8
   qr_flutter: ^4.1.0
   flutter_launcher_icons: ^0.13.1
+  flutter_local_notifications: ^16.3.0
+  rxdart: ^0.27.7
 
 
   # The following adds the Cupertino Icons font to your application.
